# QuasiDRE

./: LICENSE  README.md  pyproject.toml  requirements.txt
NegSampleStudy/: data_generation.ipynb  evaluate_MLP_classifiers.py  evaluate_SMM_classifier_subdensities.ipynb  evaluate_SMM_classifiers.py  evaluate_all_classifiers.ipynb  evaluate_classifiers.ipynb  sample_array.npy  train_MLP_classifier.py  train_SMM_classifier.py  train_SMM_classifier_subdensities.py
SMEFT/: SMM_loss_landscape.ipynb  data_processing.ipynb  evaluation_helpers.py  generate_discriminant_data.ipynb  train_MLP_loss_classifier.ipynb  train_SMM_classifier.ipynb  train_SMM_classifier_subdensities.ipynb  train_SMM_classifier_total_variation.ipynb  train_SMM_qdre_classifier.ipynb  train_SMM_revert_classifier.ipynb  train_discriminator.ipynb
ToyModels/: SMM_loss_landscape.ipynb  data_generation.ipynb  evaluate_SMM_classifier_subdensities.ipynb  evaluate_classifiers.ipynb  evaluation_helpers.py  train_MLP_classifier.ipynb  train_SMM_classifier.ipynb  train_SMM_classifier_subdensities.ipynb  train_SMM_qdre_classifier.ipynb  train_SMM_revert_classifier.ipynb
examples/SMEFT/: data_processing.ipynb  evaluate_SMM_classifiers_subdensities.ipynb  evaluate_classifiers_with_SWD.ipynb  train_MLP_loss_classifier.ipynb  train_SMM_classifier.ipynb  train_SMM_classifier_subdensities.ipynb  train_SMM_revert_classifier.ipynb
examples/ToyModels/: SMM_loss_landscape.ipynb  data_generation.ipynb  evaluate_SMM_classifier_subdensities.ipynb  evaluate_classifiers.ipynb  evaluation_helpers.py  train_MLP_classifier.ipynb  train_SMM_classifier.ipynb  train_SMM_classifier_subdensities.ipynb  train_SMM_revert_classifier.ipynb
examples/ToyModels/Camel/: equations.py  (+1 more)
qdre/: __init__.py  metrics.py  plot_helpers.py  plotting.py  train.py
qdre/Camel/: models.py
tests/: test_dataloader.py  test_stats.py  test_train.py
utils/: __init__.py  models.py  plotting.py  preprocessing.py  swd.py  tools.py  train.py
utils/Camel/: __init__.py
utils/TROT/: Projections.py  Tsallis.py  __init__.py
