[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quasidre"
version = "0.0.0"
description = "Density-ratio estimation tools for quasi-probabilistic distributions"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "mdkdrnevich", email = "mdkdrnevich@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mdkdrnevich/QuasiDRE"
Repository = "https://github.com/mdkdrnevich/QuasiDRE"
Issues = "https://github.com/mdkdrnevich/QuasiDRE/issues"

dependencies = [
    "numpy>=1.24,<3",
    "torch>=2.0,<3",
    "matplotlib>=3.10,<4",
    "scipy>=1.10,<2",
    "tqdm>=4.67,<5",
    "PyYAML>=6.0,<7",
    "plothist>=1.3,<2",
]

[tool.setuptools]
packages = ["qdre"]
